[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/plants/cactus.png" type="Texture" id=1]
[ext_resource path="res://src/plants/notplant.png" type="Texture" id=2]
[ext_resource path="res://scripts/Cactus.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 4 )

[node name="Cactus" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="notplant" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 0 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -23, 0 )
shape = SubResource( 2 )

[node name="Mouth" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouth"]
position = Vector2( -7, 0 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Mouth" to="." method="_on_Mouth_body_entered"]
[connection signal="body_exited" from="Mouth" to="." method="_on_Mouth_body_exited"]
